adding logic and styles to the buttons